Add real WebRTC onion topology demo